Designed patient card. Having problems with login, so we gonna fix that first

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
       connectTimeout: PT55S
   main:
     allow-bean-definition-overriding: true
+  thymeleaf:
+    cache: false
 
 r2dbc:
   migrate:
