--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,13 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.4.2.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>one.util</groupId>
+            <artifactId>streamex</artifactId>
+            <version>0.8.1</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
